Add gates component

--- a/AirportFlights.Web/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/AirportFlights.Web/ClientApp/app/components/navmenu/navmenu.component.html
@@ -27,6 +27,11 @@
                         <span class='glyphicon glyphicon-th-list'></span> Fetch data
                     </a>
                 </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/airport-flights']">
+                        <span class='glyphicon glyphicon-th-list'></span> Airport Flights
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
